# opengl_rust

./: Cargo.toml
src/: main.rs  tabby.rs
src/tabby/: core.rs
src/tabby/core/: camera.rs  common.rs  shader.rs
src/tabby/models/: mesh.rs  model.rs
