[package]
name = "opengl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.47.0"
image = "0.24.5"
# only needed from chapter 3 on
# tobj = "3.2.3"
tobj = "0.1.6"
num = "0.4.0"
rand = "0.8.5"